display flights bolder

--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -1649,3 +1649,7 @@ section.bfcard .bfleftnav+.pages_static_rami .terms img[alt="traditionalists"] {
 div.pack_room .ap-cont div.gallery {
     border: 1px solid #ccc;
 }
+
+.pkg-section .flight-conttt {
+	border: 2px solid;
+}
