--- a/public/assets/mobile/css/style.css
+++ b/public/assets/mobile/css/style.css
@@ -1150,5 +1150,5 @@ html.translated-ltr .pkgprc font {font-size: 32px!important;}
 .immediate_approval {font-size: 16px; font-weight: 700;}
 
 .flt-inner .flights-details-box-inner {
-	border: 2px solid #2f1919;
+	border: 2px solid !important;
 }
