--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -1653,3 +1653,10 @@ div.pack_room .ap-cont div.gallery {
 .pkg-section .flight-conttt {
 	border: 2px solid;
 }
+
+.payment_iframe {
+	width: 100%;
+	height: 500px;
+    float: right;
+	border: none;
+}
