--- a/public/assets/mobile/css/style.css
+++ b/public/assets/mobile/css/style.css
@@ -1152,3 +1152,9 @@ html.translated-ltr .pkgprc font {font-size: 32px!important;}
 .flt-inner .flights-details-box-inner {
 	border: 2px solid !important;
 }
+
+.payment_iframe {
+	width: 100%;
+	height: 420px;
+	border: none;
+}
